update attendance Function
